# OSSU-CS

intro-CS/introduction-to-programming/CS50P-Introduction-To-Programming-With-Python/: README.md  pyproject.toml
intro-CS/introduction-to-programming/CS50P-Introduction-To-Programming-With-Python/Conditionals/: Conditionals-Lecture.md  compare.dio  compare.py  parity.py
intro-CS/introduction-to-programming/CS50P-Introduction-To-Programming-With-Python/Exceptions/: debuggin.md  number.py
intro-CS/introduction-to-programming/CS50P-Introduction-To-Programming-With-Python/Functions-Variables/: Calculator.py  hello.py
intro-CS/introduction-to-programming/CS50P-Introduction-To-Programming-With-Python/Libraries/: name.py  say2.py  style-notes.md
intro-CS/introduction-to-programming/CS50P-Introduction-To-Programming-With-Python/Loops/: Loops-class-Info.md  cat.py  loops-diagrams.dio  mario.py
intro-CS/introduction-to-programming/CS50P-Introduction-To-Programming-With-Python/W0_Functions_Variables/: Functions-Variables.md
intro-CS/introduction-to-programming/CS50P-Introduction-To-Programming-With-Python/W1_Conditionals/: grade.py  house.py
intro-CS/introduction-to-programming/CS50P-Introduction-To-Programming-With-Python/W2_Loops/: hogwarts.py
intro-CS/introduction-to-programming/CS50P-Introduction-To-Programming-With-Python/W3_Exceptions/: exceptions-notes.md
intro-CS/introduction-to-programming/CS50P-Introduction-To-Programming-With-Python/W4_Libraries/: average.py  generate.py  itunes.py  libraries-notes.md  say.py  sayings.py
intro-CS/introduction-to-programming/CS50P-Introduction-To-Programming-With-Python/W5_Unit_Tests/: unit-tests-notes.md
intro-CS/introduction-to-programming/CS50P-Introduction-To-Programming-With-Python/W6_File_Io/: names.py
intro-CS/introduction-to-programming/CS50P-Introduction-To-Programming-With-Python/W8_Object_Oriented_Programming/: hat.py  oop.md
intro-CS/introduction-to-programming/CS50P-Introduction-To-Programming-With-Python/W9_Et_cetera/: et_cetera_notes.md  unpack.py  yell.py
intro-CS/introduction-to-programming/CS50P-Introduction-To-Programming-With-Python/file-io/: file-io.md
(+99 files in other folders)
